--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,10 @@ flutter:
     - family: Roboto
       fonts:
         - asset: assets/text/Roboto-Bold.ttf
+    - family: Pacifico
+      fonts:
+        - asset: assets/text/Pacifico-Regular.ttf
+
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
